uing/rawui.nim


proc menuAppendQuitItem*(m: ptr Menu): ptr MenuItem {.cdecl,
    importc: "uiMenuAppendQuitItem", libui.}

proc menuAppendPreferencesItem*(m: ptr Menu): ptr MenuItem {.cdecl,
    importc: "uiMenuAppendPreferencesItem", libui.}

proc menuAppendAboutItem*(m: ptr Menu): ptr MenuItem {.cdecl,
    importc: "uiMenuAppendAboutItem", libui.}

proc menuAppendSeparator*(m: ptr Menu) {.cdecl, importc: "uiMenuAppendSeparator",
                                     libui.}

proc newMenu*(name: cstring): ptr Menu {.cdecl, importc: "uiNewMenu", libui.}

proc openFile*(parent: ptr Window): cstring {.cdecl, importc: "uiOpenFile",
    libui.}

proc openFolder*(parent: ptr Window): cstring {.cdecl, importc: "uiOpenFolder",
    libui.}

proc saveFile*(parent: ptr Window): cstring {.cdecl, importc: "uiSaveFile",
    libui.}

proc msgBox*(parent: ptr Window; title: cstring; description: cstring) {.cdecl,
    importc: "uiMsgBox", libui.}

proc msgBoxError*(parent: ptr Window; title: cstring; description: cstring) {.cdecl,
    importc: "uiMsgBoxError", libui.}

type
  Area* = object of Control

  Modifiers* {. size: sizeof(cint) .} = enum
    ## Keyboard modifier keys. 
    ## 
    ## Usable as bitmasks.
    
    ModifierCtrl  = 1 shl 0, ## Control key.
    ModifierAlt   = 1 shl 1, ## Alternate/Option key.
    ModifierShift = 1 shl 2, ## Shift key.
    ModifierSuper = 1 shl 3, ## Super/Command/Windows key

  ExtKey* {. size: sizeof(cint) .} = enum
    ExtKeyEscape = 1, 
    ExtKeyInsert,  ## equivalent to "Help" on Apple keyboards 
    ExtKeyDelete, 
    ExtKeyHome, 
    ExtKeyEnd, 
    ExtKeyPageUp, 
    ExtKeyPageDown, 
    ExtKeyUp, 
    ExtKeyDown, 
    ExtKeyLeft, 
    ExtKeyRight, 
    ExtKeyF1,     ## F1..F12 are guaranteed to be consecutive
    ExtKeyF3, 
    ExtKeyF4, 
    ExtKeyF5, 
    ExtKeyF6, 
    ExtKeyF7, 
    ExtKeyF8, 
    ExtKeyF9, 
    ExtKeyF10, 
    ExtKeyF11, 
    ExtKeyF12, 
    ExtKeyN0,     ## numpad keys; independent of Num Lock state
    ExtKeyN1,     ## N0..N9 are guaranteed to be consecutive
    ExtKeyN2, 
    ExtKeyN3, 
    ExtKeyN4, 
    ExtKeyN5, 
    ExtKeyN6,
    ExtKeyN7, 
    ExtKeyN8, 
    ExtKeyN9, 
    ExtKeyNDot, 
    ExtKeyNEnter, 
    ExtKeyNAdd, 
    ExtKeyNSubtract, 
    ExtKeyNMultiply, 
    ExtKeyNDivide

  AreaDrawParams* {.bycopy.} = object
    context*   : ptr DrawContext
    areaWidth* : cdouble
    areaHeight*: cdouble
    clipX*     : cdouble
    clipY*     : cdouble
    clipWidth* : cdouble
    clipHeight*: cdouble

  AreaMouseEvent* {.bycopy.} = object
    x*         : cdouble
    y*         : cdouble
    areaWidth* : cdouble
    areaHeight*: cdouble
    down*      : cint
    up*        : cint
    count*     : cint
    modifiers* : Modifiers
    held1To64* : uint64

  AreaKeyEvent* {.bycopy.} = object
    key*       : char
    extKey*    : ExtKey
    modifier*  : Modifiers
    modifiers* : Modifiers
    up*        : cint

  DrawContext* = object

  AreaHandler* {.bycopy.} = object
    draw*         : proc (a1: ptr AreaHandler; a2: ptr Area; a3: ptr AreaDrawParams) {.cdecl.}
    mouseEvent*   : proc (a1: ptr AreaHandler; a2: ptr Area; a3: ptr AreaMouseEvent) {.cdecl.}
    mouseCrossed* : proc (a1: ptr AreaHandler; a2: ptr Area; left: cint) {.cdecl.}
    dragBroken*   : proc (a1: ptr AreaHandler; a2: ptr Area) {.cdecl.}
    keyEvent*     : proc (a1: ptr AreaHandler; a2: ptr Area; a3: ptr AreaKeyEvent): cint {.cdecl.}

type
  WindowResizeEdge* {. size: sizeof(cint) .} = enum
    WindowResizeEdgeLeft, 
    WindowResizeEdgeTop, 
    WindowResizeEdgeRight, 
    WindowResizeEdgeBottom, 
    WindowResizeEdgeTopLeft, 
    WindowResizeEdgeTopRight, 
    WindowResizeEdgeBottomLeft, 
    WindowResizeEdgeBottomRight


template area*(this: untyped): untyped =
  (cast[ptr Area]((this)))


proc areaSetSize*(a: ptr Area; width: cint; height: cint) {.cdecl,
    importc: "uiAreaSetSize", libui.}

proc areaQueueRedrawAll*(a: ptr Area) {.cdecl, importc: "uiAreaQueueRedrawAll",
                                    libui.}
proc areaScrollTo*(a: ptr Area; x: cdouble; y: cdouble; width: cdouble; height: cdouble) {.
    cdecl, importc: "uiAreaScrollTo", libui.}

proc areaBeginUserWindowMove*(a: ptr Area) {.cdecl,
    importc: "uiAreaBeginUserWindowMove", libui.}
proc areaBeginUserWindowResize*(a: ptr Area; edge: WindowResizeEdge) {.cdecl,
    importc: "uiAreaBeginUserWindowResize", libui.}
proc newArea*(ah: ptr AreaHandler): ptr Area {.cdecl, importc: "uiNewArea",
    libui.}
proc newScrollingArea*(ah: ptr AreaHandler; width: cint; height: cint): ptr Area {.cdecl,
    importc: "uiNewScrollingArea", libui.}

type
  DrawPath* = object

  DrawBrushType* {. size: sizeof(cint) .} = enum
    DrawBrushTypeSolid, 
    DrawBrushTypeLinearGradient, 
    DrawBrushTypeRadialGradient, 
    DrawBrushTypeImage

  DrawLineCap* {. size: sizeof(cint) .} = enum
    DrawLineCapFlat, 
    DrawLineCapRound, 
    DrawLineCapSquare

  DrawLineJoin* {. size: sizeof(cint) .} = enum
    DrawLineJoinMiter, 
    DrawLineJoinRound, 
    DrawLineJoinBevel

  DrawFillMode* {. size: sizeof(cint) .} = enum
    DrawFillModeWinding, 
    DrawFillModeAlternate

  DrawBrush* {.bycopy.} = object
    `type`*     : DrawBrushType
    r*          : cdouble
    g*          : cdouble
    b*          : cdouble
    a*          : cdouble
    x0*         : cdouble
    y0*         : cdouble
    x1*         : cdouble
    y1*         : cdouble
    outerRadius*: cdouble
    # perhaps instead an array?
    stops*      : ptr UncheckedArray[DrawBrushGradientStop]
    numStops*   : csize_t

  DrawStrokeParams* {.bycopy.} = object
    cap*       : DrawLineCap
    join*      : DrawLineJoin
    thickness* : cdouble ## if this is 0 on windows there will be a crash with dashing
    miterLimit*: cdouble
    dashes*    : ptr cdouble
    numDashes* : csize_t
    dashPhase* : cdouble

  DrawMatrix* {.bycopy.} = object
    m11*: cdouble
    m12*: cdouble
    m21*: cdouble
    m22*: cdouble
    m31*: cdouble
    m32*: cdouble

  DrawBrushGradientStop* {.bycopy.} = object
    pos*: cdouble
    r*  : cdouble
    g*  : cdouble
    b*  : cdouble
    a*  : cdouble

const
  DrawDefaultMiterLimit* = 10.0 ## This is the default for both Cairo and Direct2D 

proc drawNewPath*(fillMode: DrawFillMode): ptr DrawPath {.cdecl,
    importc: "uiDrawNewPath", libui.}
proc drawFreePath*(p: ptr DrawPath) {.cdecl, importc: "uiDrawFreePath", libui.}
proc drawPathNewFigure*(p: ptr DrawPath; x: cdouble; y: cdouble) {.cdecl,
    importc: "uiDrawPathNewFigure", libui.}
proc drawPathNewFigureWithArc*(p: ptr DrawPath; xCenter: cdouble; yCenter: cdouble;
                              radius: cdouble; startAngle: cdouble; sweep: cdouble;
                              negative: cint) {.cdecl,
    importc: "uiDrawPathNewFigureWithArc", libui.}
proc drawPathLineTo*(p: ptr DrawPath; x: cdouble; y: cdouble) {.cdecl,
    importc: "uiDrawPathLineTo", libui.}

proc drawPathArcTo*(p: ptr DrawPath; xCenter: cdouble; yCenter: cdouble;
                   radius: cdouble; startAngle: cdouble; sweep: cdouble;
                   negative: cint) {.cdecl, importc: "uiDrawPathArcTo",
                                   libui.}
proc drawPathBezierTo*(p: ptr DrawPath; c1x: cdouble; c1y: cdouble; c2x: cdouble;
                      c2y: cdouble; endX: cdouble; endY: cdouble) {.cdecl,
    importc: "uiDrawPathBezierTo", libui.}

proc drawPathCloseFigure*(p: ptr DrawPath) {.cdecl, importc: "uiDrawPathCloseFigure",
    libui.}

proc drawPathAddRectangle*(p: ptr DrawPath; x: cdouble; y: cdouble; width: cdouble;
                          height: cdouble) {.cdecl,
    importc: "uiDrawPathAddRectangle", libui.}
proc drawPathEnded*(p: ptr DrawPath): cint {.cdecl, importc: "uiDrawPathEnded",
                                        libui.}
proc drawPathEnd*(p: ptr DrawPath) {.cdecl, importc: "uiDrawPathEnd", libui.}
proc drawStroke*(c: ptr DrawContext; path: ptr DrawPath; b: ptr DrawBrush;
                p: ptr DrawStrokeParams) {.cdecl, importc: "uiDrawStroke",
                                        libui.}
proc drawFill*(c: ptr DrawContext; path: ptr DrawPath; b: ptr DrawBrush) {.cdecl,
    importc: "uiDrawFill", libui.}

proc drawMatrixSetIdentity*(m: ptr DrawMatrix) {.cdecl,
    importc: "uiDrawMatrixSetIdentity", libui.}
proc drawMatrixTranslate*(m: ptr DrawMatrix; x: cdouble; y: cdouble) {.cdecl,
    importc: "uiDrawMatrixTranslate", libui.}
proc drawMatrixScale*(m: ptr DrawMatrix; xCenter: cdouble; yCenter: cdouble; x: cdouble;
                     y: cdouble) {.cdecl, importc: "uiDrawMatrixScale",
                                 libui.}
proc drawMatrixRotate*(m: ptr DrawMatrix; x: cdouble; y: cdouble; amount: cdouble) {.
    cdecl, importc: "uiDrawMatrixRotate", libui.}
proc drawMatrixSkew*(m: ptr DrawMatrix; x: cdouble; y: cdouble; xamount: cdouble;
                    yamount: cdouble) {.cdecl, importc: "uiDrawMatrixSkew",
                                      libui.}
proc drawMatrixMultiply*(dest: ptr DrawMatrix; src: ptr DrawMatrix) {.cdecl,
    importc: "uiDrawMatrixMultiply", libui.}
proc drawMatrixInvertible*(m: ptr DrawMatrix): cint {.cdecl,
    importc: "uiDrawMatrixInvertible", libui.}
proc drawMatrixInvert*(m: ptr DrawMatrix): cint {.cdecl,
    importc: "uiDrawMatrixInvert", libui.}
proc drawMatrixTransformPoint*(m: ptr DrawMatrix; x: ptr cdouble; y: ptr cdouble) {.cdecl,
    importc: "uiDrawMatrixTransformPoint", libui.}
proc drawMatrixTransformSize*(m: ptr DrawMatrix; x: ptr cdouble; y: ptr cdouble) {.cdecl,
    importc: "uiDrawMatrixTransformSize", libui.}
proc drawTransform*(c: ptr DrawContext; m: ptr DrawMatrix) {.cdecl,
    importc: "uiDrawTransform", libui.}

proc drawClip*(c: ptr DrawContext; path: ptr DrawPath) {.cdecl, importc: "uiDrawClip",
    libui.}
proc drawSave*(c: ptr DrawContext) {.cdecl, importc: "uiDrawSave", libui.}
proc drawRestore*(c: ptr DrawContext) {.cdecl, importc: "uiDrawRestore",
                                    libui.}

type
  Attribute* = object
  AttributedString* = object

  AttributeType* {.size: sizeof(cint).} = enum
    AttributeTypeFamily, 
    AttributeTypeSize, 
    AttributeTypeWeight, 
    AttributeTypeItalic, 
    AttributeTypeStretch, 
    AttributeTypeColor, 
    AttributeTypeBackground, 
    AttributeTypeUnderline, 
    AttributeTypeUnderlineColor, 
    AttributeTypeFeatures


proc freeAttribute*(a: ptr Attribute) {.cdecl, importc: "uiFreeAttribute",
                                    libui.}

proc attributeGetType*(a: ptr Attribute): AttributeType {.cdecl,
    importc: "uiAttributeGetType", libui.}

proc newFamilyAttribute*(family: cstring): ptr Attribute {.cdecl,
    importc: "uiNewFamilyAttribute", libui.}

proc attributeFamily*(a: ptr Attribute): cstring {.cdecl,
    importc: "uiAttributeFamily", libui.}

proc newSizeAttribute*(size: cdouble): ptr Attribute {.cdecl,
    importc: "uiNewSizeAttribute", libui.}

proc attributeSize*(a: ptr Attribute): cdouble {.cdecl, importc: "uiAttributeSize",
    libui.}

type
  TextWeight* {.size: sizeof(cint).} = enum
    ## `TextWeight` represents possible text weights. These roughly
    ## map to the OS/2 text weight field of TrueType and OpenType
    ## fonts, or to CSS weight numbers. The named constants are
    ## nominal values; the actual values may vary by font and by OS,
    ## though this isn't particularly likely. Any value between
    ## `TextWeightMinimum` and `TextWeightMaximum`, inclusive,
    ## is allowed.
    ## 
    ## Note that due to restrictions in early versions of Windows, some
    ## fonts have "special" weights be exposed in many programs as
    ## separate font families. This is perhaps most notable with
    ## Arial Black. libui-ng does not do this, even on Windows (because the
    ## DirectWrite API libui-ng uses on Windows does not do this); to
    ## specify Arial Black, use family Arial and weight `TextWeightBlack`.
